# nvidia-video-codec-sdk

./: Cargo.toml
examples/: importing_vulkan_buffers.rs
src/: lib.rs
src/safe/: api.rs  buffer.rs  encoder.rs  mod.rs  result.rs  session.rs
src/sys/linux_sys/: cuviddec.rs  nvEncodeAPI.rs  nvcuvid.rs
src/sys/windows_sys/: cuviddec.rs  nvEncodeAPI.rs  nvcuvid.rs
tests/: blanks.rs
