[package]
name = "nvidia-video-codec-sdk"
version = "0.4.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

description = "Bindings for NVIDIA Video Codec SDK"
homepage = "https://github.com/ViliamVadocz/nvidia-video-codec-sdk"
documentation = "https://docs.rs/nvidia-video-codec-sdk"
repository = "https://github.com/ViliamVadocz/nvidia-video-codec-sdk"
readme = "README.md"

keywords = ["encoding", "decoding", "bindings", "nvidia", "cuda"]

[package.metadata.docs.rs]
features = ["ci-check"]

[dependencies]
cudarc = "0.13.4"

[dev-dependencies]
vulkano = "0.35.1"

[features]
default = ["cudarc/cuda-version-from-build-system"]
ci-check = []
cuda11 = ["cudarc/cuda-11040"]
cuda12 = ["cudarc/cuda-12000"]
